# sugoi-wfc

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: general.yml
src/: image_reader.rs  img_process.rs  main.rs
src/data/: colour.rs  direction.rs  mod.rs  vector2.rs
